@@ -376,7 +376,7 @@ fi
 VPR_PATH([0.27], , [AC_MSG_ERROR([*** VPR is required for PyJuggler ***])])
 JCCL_PATH_CXX([0.12], ,
               [AC_MSG_ERROR([*** JCCL is required for PyJuggler ***])])
-GADGETEER_PATH([0.17], ,
+GADGETEER_PATH([0.19], ,
                [AC_MSG_ERROR([*** Gadgeteer is required for PyJuggler ***])])
 VRJUGGLER_PATH([1.1.148], ,
                [AC_MSG_ERROR([*** VR Juggler is required for PyJuggler ***])])
